www/components/Layout/Drawer/Drawer.module.scss
@use "../../../styles/colors.scss";

.container {
  display: flex;
  flex-direction: row;
  height: 100%;

  .drawer {
    width: 15em;
    transition: width 200ms ease;
    overflow: hidden;
    background: colors.$foreground;
    border-right: 1px solid colors.$border;
  }

  .closed {
    width: 0em;
  }

  .icon_button {
    font-size: 20px;
    text-transform: capitalize;
    width: 100%;
    padding: 0.5em 0em 0.5em 2em;
    justify-content: flex-start;
    color: colors.$midText;
    border-radius: 0;

    svg {
      font-size: 30px;
    }

    &.blue {
      svg {
        color: var(--blue);
      }
    }

    &.green {
      svg {
        color: var(--green);
      }
    }

    &.purple {
      svg {
        color: var(--purple);
      }
    }
  }
}

